# TaskFlow-Backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  init-minio.sh  pyproject.toml  redis.conf.example  requirements-dev.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0329af858727_discord_fields_not_null_check.py  195b6598dc1a_gin_index_for_group_and_and_max_members.py  23262b57f5a1_init.py  250d54da5bb3_made_name_group_field_unique.py  3028559c4074_added_description_field_for_group.py  40ad1ded6b42_gin_index_and_trgm_for_search.py  47f2b9f84c84_fix_foreign_key.py  6d8ce3b30d45_group_permissions_and_refactor.py  79220f938232_info_about_user_avatar.py  8fa60a75fefa_changed_size_of_login_string.py  b00ad9f1644b_added_indexes_for_group_id_user_id_for_.py  bdafbc742825_made_user_search_by_login_except_name.py  d4420a170b69_cascade_deletes_if_user_leave_from_group.py  efd13d1707a0_added_privacy_fields.py
nginx/: nginx.conf
nginx/errors/: 404.json  429.json
nginx/errors/cdn/: 404.json
src/: config.py  constants.py  database.py  exceptions.py  logging_config.py  main.py  models.py  schemas.py  utils.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  routes.py  schemas.py  security.py  utils.py
src/auth/services/: __init__.py  redis_refresh_token_service.py  token_rotation.py  user_service.py
src/auth/usecases/: __init__.py  change_user_password.py  logout_user.py  refresh_user_tokens.py  sign_in_user.py  sign_up_user.py
src/groups/: __init__.py  constants.py  enums.py  exceptions.py  models.py  routes.py  schemas.py
src/groups/services/: __init__.py  group_service.py  mappings.py
src/groups/usecases/: __init__.py  add_user_group_permissions.py  change_group_creator.py  create_group.py  delete_group_avatar.py  delete_user_from_group.py  get_group.py  get_group_join_requests.py  get_received_invitations.py  get_user_groups.py  invite_user_to_group.py  leave_from_group.py  patch_group.py  patch_group_avatar.py  remove_user_group_permissions.py  respond_to_invitation.py  respond_to_join_request.py  search_groups.py  send_join_request.py
src/minio/: __init__.py  client.py  constants.py  utils.py
src/redis/: __init__.py  client.py
src/tests/: test_app.py
src/user/: __init__.py  constants.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py
src/user/services/: __init__.py  user_service.py
src/user/usecases/: __init__.py  delete_my_profile_avatar.py  get_my_profile.py  get_public_user_profile.py  get_user_groups.py  patch_my_profile.py  patch_my_profile_avatar.py  search_user_profiles.py
tests/: client.py  conftest.py  test_auth.py
tests/integration/auth/: test_change_password.py  test_refresh.py  test_signin.py  test_signup.py
tests/integration/groups/: test_create_group.py
tests/integration/helpers/: __init__.py  auth.py  common.py  user.py
