[project]
name = "TaskFlow"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]",
    "fastapi-limiter",
    "orjson",
    "uvicorn[standard]",
    "pydantic_settings",
    "uvloop ; sys_platform != 'win32'",
    "httptools",
    "sqlalchemy[asyncio]",
    "alembic",
    "asyncpg",
    "argon2-cffi",
    "email-validator",
    "python-jose[cryptography]",
    "redis",
    "aioboto3",
    "types-aiobotocore-s3",
    "pillow",
    "ty>=0.0.1a17"
]

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = ["E", "F", "I", "B"]
lint.ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ty.environment]
python-platform = "win32"
python-version = "3.13"
root = ["."]
python = "./.venv"

[tool.ty.src]
exclude = [
    "alembic",
]
include = [
    "src", "tests"
]


[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "alembic/*",
    "*/config.py",
]
concurrency = [
    "greenlet",
    "thread"
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = """
    --cov=src
    --cov-report=term-missing
    --cov-report=html
"""
testpaths = ["tests"]